maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:11: error: not found: value loop
  loop.breakable{
  ^ShortestPathMaze:17: error: not found: value loop
          loop.break;
          ^