maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
}

def scribe() {
  var i=getMondeLargeur()
  var j=getMondeHauteur()
  var iciX=0
  var iciY=0
  
  loop.breakable{
    for (x<- 0 to i){
      for(y<- 0 to j){
        if (aBiscuit(x,y)){
          iciX=x
          iciY=y
          loop.break;
        }
      }
    }
  }
  
  setIndication(iciX,iciY,0)
}